# advent-of-code

./: .gitignore  README.md  aoc  config.yaml  main.py  pyproject.toml  requirements.txt  run.py
d01/: pythonSolution.py
d02/: pythonSolution.py
d03/: pythonSolution.py
d03/src/: main.rs
d04/: pythonSolution.py
d05/: pythonSolution.py
d06/: pythonSolution.py
day-1/: pythonSolution.py
day-2/: pythonSolution.py
day-2/src/: main.rs
day-3/src/: main.rs
day-4/: pythonSolution.py
solutions/2024/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
solutions/2024/rust/d01/src/: main.rs
solutions/2024/rust/d06/src/: main.rs
solutions/2025/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py
templates/: templatePython.py  templateRust.rs
utils/: cli_args.py  files.py  helper_functions.py  output_handler.py  puzzle_reader.py  solution_base.py  test_runner.py
utils/templates/: python_template.py
