[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdown-it-py>=4.0.0",
    "mdurl>=0.1.2",
    "pygments>=2.19.2",
    "pyinstrument>=5.1.1",
    "pyperclip>=1.11.0",
    "rich>=14.2.0",
    "ruff>=0.14.8",
]
